# erl_common

./: .clang-format  .gitmodules  CHANGELOG.md  CMakeLists.txt  Pipfile  README.md  erl_common.repos  package.xml  pyproject.toml  requirements.txt  setup.py  trouble_shooting.md
backup/test/gtest/: test_plplot.cpp
binding/: pybind11_erl_common.cpp  pyerl_common.cpp
cmake/: Findepoxy.cmake  README.md  config_pangolin.cmake  config_plplot.cmake  erl_commonConfig.cmake.in  erl_common_dependencies.cmake  erl_common_tools.cmake  erl_config_absl.cmake  erl_config_boost.cmake  erl_config_cgal.cmake  erl_config_eigen.cmake  erl_config_fmt.cmake  erl_config_json.cmake  erl_config_lapack.cmake  erl_config_libtorch.cmake  erl_config_nanoflann.cmake  erl_config_ogre.cmake  erl_config_open3d.cmake  erl_config_opencv.cmake  erl_config_openmp.cmake  erl_config_pangolin.cmake  erl_config_pcl.cmake  erl_config_plplot.cmake  erl_config_pybind11.cmake  erl_config_python3.cmake  erl_config_qhull.cmake  erl_config_qt.cmake  erl_config_qt5.cmake  erl_config_qt6.cmake  erl_config_tracy.cmake  erl_config_yaml.cmake  erl_configure_file.cmake
cmake/deprecated/: erl_before_find_package.cmake  erl_catkin_setup.cmake  erl_check_file.cmake  erl_dump_cmake_vars.cmake  erl_find_package.cmake  erl_generate_python_package.cmake  erl_install.cmake  erl_is_top_level.cmake  erl_os_release_info.cmake  erl_project_setup.cmake  erl_set_project_paths.cmake  erl_suggest_cmd.cmake
cmake/mkl/: MKLConfig.cmake
docker/: build.bash
docker/ros-humble/: Dockerfile
docker/ros-noetic/: Dockerfile  build.bash
docker/ubuntu-2004/: Dockerfile  build.bash  build_cuda.bash
docker/ubuntu-2204/: Dockerfile  build.bash  build_cuda.bash
docker/ubuntu-2404/: Dockerfile  build.bash  build_cuda.bash
include/erl_common/: angle_utils.hpp  assert.hpp  binary_file.hpp  block_timer.hpp  boost.hpp  clip.hpp  color_maps.hpp  color_print.hpp  csv.hpp  data_buffer_manager.hpp  data_buffer_manager.tpp  eigen.hpp  eigen.tpp  enum_parse.hpp  exception.hpp  factory.hpp  factory_pattern.hpp  fibonacci_heap.hpp  fmt.hpp  grid_map.hpp  grid_map_drawer_2d.hpp  grid_map_info.hpp  hash_map.hpp  json.hpp  libzip.hpp  logging.hpp  logging_level.hpp  logging_no_fmt.hpp  macros.hpp  number_logger.hpp  opencv.hpp  pangolin_plotter_curve_2d.hpp  pangolin_plotter_image.hpp  pangolin_plotter_time_series_2d.hpp  pangolin_window.hpp  plplot_fig.hpp  polar_coords.hpp  progress_bar.hpp  pybind11.hpp  pybind11_data_buffer_manager.hpp  (+18 more)
python/: CMakeLists.txt
python/binding/: bind_logging.cpp  bind_storage.cpp  bind_yaml.cpp  pybind11_erl_common.cpp  pybind11_erl_common.hpp
python/erl_common/: __init__.py  __init__.pyi  dict_ext.py  pyerl_common.pyi  storage.py  storage.pyi  yaml.py  yaml.pyi
python/erl_common/common/: __init__.py  __init__.pyi
python/erl_common/common/storage/: __init__.py.in
python/erl_common/common/vedo_ext/: lines.py  picture.py  scatter.py
python/erl_common/common/yaml/: __init__.py.in
python/erl_common/vedo_ext/: __init__.py  button_group.py  picture.py  polygon_mesh_2d.py
scripts/: install_google_test.bash  install_matplotplusplus.bash  install_openblas_seq.bash  install_opencv.bash  install_yaml_cpp.bash  setup_archlinux.bash  setup_macos.bash  setup_ros_env.sh  setup_ubuntu_20.04.bash  setup_ubuntu_22.04.bash  setup_ubuntu_22.04_24.04.bash
src/: csv.cpp  eigen.cpp  logging.cpp  opencv.cpp  pangolin_plotter_curve_2d.cpp  pangolin_plotter_image.cpp  pangolin_plotter_time_series_2d.cpp  pangolin_window.cpp  plplot_fig.cpp  progress_bar.cpp  random.cpp  ros2_topic_params.cpp  tensor.cpp  yaml.cpp
src/ros/: CMakeLists.txt  ros.cmake
test/: .gitignore  CMakeLists.txt  test_binary.cpp  test_storage_order.cpp  test_tensor.py
test/gtest/: test_binary.cpp  test_boost_d_ary_heap.cpp  test_boost_fibonacci_heap.cpp  test_boost_graph.cpp  test_csv.cpp  test_data_buffer_manager.cpp  test_eigen.cpp  test_fibonacci_heap.cpp  test_grid_map_info.cpp  test_incremental_grid_map_2d.cpp  test_libzip.cpp  test_logging.cpp  test_logging_no_fmt.cpp  test_number_logger.cpp  test_plplot_fig.cpp  test_progress_bar.cpp  test_ring_buffer.cpp  test_storage_order.cpp  test_wrap_angle.cpp  test_yaml.cpp
test/pytest/: test_grid_map_info.py
