<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>erl_common</name>
    <version>0.1.0</version>
    <description>erl_common is a C++ module commonly used by other modules</description>
    <author email="daizhirui@hotmail.com">Zhirui Dai</author>
    <maintainer email="daizhirui@hotmail.com">Zhirui Dai</maintainer>
    <license>MIT</license>
    <url type="repository">https://github.com/ExistentialRobotics/erl_common.git</url>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

    <depend condition="$ROS_VERSION == 1">roscpp</depend>
    <depend condition="$ROS_VERSION == 2">rclcpp</depend>

    <depend condition="$ROS_VERSION == 1">std_msgs</depend>
    <depend condition="$ROS_VERSION == 1">geometry_msgs</depend>
    <depend condition="$ROS_VERSION == 1">tf2_ros</depend>

    <build_depend>Eigen3</build_depend>
    <build_depend>OpenCV</build_depend>
    <build_depend>yaml-cpp</build_depend>
    <build_depend>nlohmann_json</build_depend>
    <build_depend>OpenMP</build_depend>
    <build_depend>MKL</build_depend>
    <build_depend>LAPACK</build_depend>
    <build_depend>Boost</build_depend>
    <build_depend>fmt</build_depend>
    <build_depend>nanoflann</build_depend>
    <build_depend>plplot</build_depend>
    <build_depend>Python3</build_depend>
    <build_depend>pybind11</build_depend>

    <build_export_depend>Eigen3</build_export_depend>    <!-- header only -->
    <build_export_depend>OpenCV</build_export_depend>
    <build_export_depend>yaml-cpp</build_export_depend>
    <build_export_depend>nlohmann_json</build_export_depend>    <!-- header only -->
    <build_export_depend>OpenMP</build_export_depend>
    <build_export_depend>MKL</build_export_depend>
    <build_export_depend>LAPACK</build_export_depend>
    <build_export_depend>Boost</build_export_depend>
    <build_export_depend>fmt</build_export_depend>
    <build_export_depend>nanoflann</build_export_depend>    <!-- header only -->
    <build_export_depend>plplot</build_export_depend>
    <build_export_depend>Python3</build_export_depend>
    <build_export_depend>pybind11</build_export_depend>    <!-- header only -->

    <exec_depend>OpenCV</exec_depend>
    <exec_depend>yaml-cpp</exec_depend>
    <exec_depend>OpenMP</exec_depend>
    <exec_depend>MKL</exec_depend>
    <exec_depend>LAPACK</exec_depend>
    <exec_depend>Boost</exec_depend>
    <exec_depend>Python3</exec_depend>
    <exec_depend>fmt</exec_depend>
    <exec_depend>plplot</exec_depend>

    <export>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    </export>

</package>
