[build-system]
requires = ["setuptools", "wheel", "toml"]

[tool.black]
line-length = 120

[erl]
description = "Python bindings for erl_common"
python_pkg_name = "erl_common"
pybind_module_name = "pyerl_common"
erl_dependencies = []
build_type = "Release"
version = "0.1.0"
author = "Zhirui Dai"
author_email = "zhdai@ucsd.edu"
entry_points = { console_scripts = [] }
license = "MIT"
