[build-system]
requires = ["setuptools", "wheel", "toml"]

[tool.black]
line-length = 120

[erl]
erl_dependencies = ["erl_cmake_tools"]
build_type = "Release"

[project]
name = "erl_common"
version = "0.2.0"
description = "Python package for erl_common"
authors = [
    { name = "Zhirui Dai", email = "zhdai@ucsd.edu" }
]
maintainers = [
    { name = "Zhirui Dai", email = "zhdai@ucsd.edu" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []
